<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/f"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ponomarenko.igor.fintesstrainer.TrainingActivity">

    <TextView
        android:id="@+id/current_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/str_current_workout"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_current_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/current_workout"
        android:text="@string/str_current_set"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_reps_in_current_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_current_set"
        android:text="@string/str_reps_in_current_set"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_rest_between_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_reps_in_current_set"
        android:text="@string/rest_between_sets"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/cb_beep_enbled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_rest_between_sets"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:text="@string/beep_enabled" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_equipment_busy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:checked="false"
        android:textOff="@string/pause"
        android:textOn="@string/resume" />

    <Button
        android:id="@+id/btn_equipment_busy"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_skip_workout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="OnEquipmentBusyBtnClick"
        android:text="@string/equipment_busy" />


    <Button
        android:id="@+id/btn_skip_workout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="OnSkipWorkoutBtnClick"
        android:layout_marginBottom="15dp"
        android:text="@string/skip_workout" />

</RelativeLayout>
