<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/daysFromLastTraining"
        android:id="@+id/period_wo_trainings"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/start_training"
        android:text="@string/startTraining"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/configure_trainings"
        android:layout_centerHorizontal="true"
        android:onClick="openTrainingActivity"/>

    <Button
        android:id="@+id/configure_trainings"
        android:text="@string/configureTraining"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="openTrainingConfiguration"/>



    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/period_wo_trainings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/start_training"
        android:choiceMode="none" />

</RelativeLayout>
